회원관리 화면 추가

--- a/src/main/web/resources/css/common.css
+++ b/src/main/web/resources/css/common.css
@@ -381,6 +381,10 @@ span{
     width: 45% !important;
 }
 
+.wd48rate {
+    width: 48% !important;
+}
+
 .wd49rate {
     width: 49% !important;
 }
