--- a/src/main/web/resources/css/iotBadSmellMonitoring.css
+++ b/src/main/web/resources/css/iotBadSmellMonitoring.css
@@ -78,11 +78,11 @@ table {
     border-spacing: 0;
 }
 
-td,
-th {
-    width: 100px;
-    padding: 0;
-}
+/*td,*/
+/*th {*/
+/*    width: 100px;*/
+/*    padding: 0;*/
+/*}*/
 
 select , input[type=text], input[type=password] , input[type=date] {
     border: 1px solid #ccc;
@@ -121,7 +121,7 @@ select {
     line-height: 38px;
     border-radius: 7px;
     padding: 0 20px;
-    margin-right : 5px;
+    margin-right : 10px;
     margin-top : 5px;
     margin-bottom : 5px;
 }
@@ -222,7 +222,33 @@ select {
     background: #fff;
 }
 .blueForm > tbody > tr> td  input {
-    width: 80%;
+    width: 86%;
+}
+.blueForm > tbody > tr> td  select {
+    width: 93%;
+}
+.whiteForm{
+    border: 1px white solid;
+    text-align: center;
+    margin-left:auto;
+    margin-right:auto;
+    box-shadow : 0px 0px 20px #000;
+}
+.whiteForm > tbody > tr> th {
+    background: white;
+    color: #fff;
+    height: 15px;
+}
+.whiteForm > tbody > tr> td {
+    height: 60px;
+    font-size: 15px;
+    background: #fff;
+}
+.whiteForm > tbody > tr> td  input {
+    width: 85%;
+}
+.whiteForm > tbody > tr> td  select {
+    width: 93%;
 }
 .titleIcon {
     background: url("../image/icon.png");
