1. 로그인 화면 메뉴 없애기 2. 메인화면 지도

--- a/src/main/web/resources/css/common.css
+++ b/src/main/web/resources/css/common.css
@@ -541,6 +541,10 @@ span{
     height: 57px !important;
 }
 
+.h70 {
+    height: 70px !important;
+}
+
 .h80 {
     height: 80px !important;
 }
@@ -1031,6 +1035,10 @@ span{
 
 .mt200 {
     margin-top: 200px !important;
+}
+
+.mt220 {
+    margin-top: 220px !important;
 }
 
 .mtm33 {
