회원관리 css 수정

--- a/src/main/web/resources/css/common.css
+++ b/src/main/web/resources/css/common.css
@@ -189,6 +189,10 @@ span{
     width: 220px !important;
 }
 
+.wd230 {
+    width: 230px !important;
+}
+
 .wd240 {
     width: 240px !important;
 }
@@ -351,6 +355,10 @@ span{
 
 .wd25rate {
     width: 25% !important;
+}
+
+.wd28rate {
+    width: 28% !important;
 }
 
 .wd30rate {
