1. history & member 화면 viewTable 수정

--- a/src/main/web/resources/css/common.css
+++ b/src/main/web/resources/css/common.css
@@ -604,7 +604,9 @@ span{
 .h660 {
     height: 660px !important;
 }
-
+.h40rate{
+    height: 40% !important;
+}
 .h50rate {
     height: 50% !important;
 }
