회원관리 화면 완료

--- a/src/main/web/resources/css/common.css
+++ b/src/main/web/resources/css/common.css
@@ -1370,6 +1370,10 @@ br, .br_2xls {
     background-color: black !important;
 }
 
+.bgc_grayC{
+    background-color: rgba(239, 239, 239, 0.5);
+}
+
 /* line-height */
 .lh_ih {
     line-height: inherit !important;
