--- a/src/main/web/resources/css/iotBadSmellMonitoring.css
+++ b/src/main/web/resources/css/iotBadSmellMonitoring.css
@@ -287,10 +287,11 @@ select::-ms-expand{
 .viewTable{
     margin: 3% auto 1% auto;
     text-align: center;
-    width: 90%;
+    width: 95%;
+    height: 440px!important;
 }
 .viewTable th{
-    height: 40px;
+    height: 40px!important;
     background: #eaeaea;
     border: 1px solid #ccc;
     border-top: 2px solid black;
