1. 화면 scroll (이력, 회원관리) 2. 회원관리 xml (total count 쿼리에 지역 검색조건 추가)

--- a/src/main/web/resources/css/common.css
+++ b/src/main/web/resources/css/common.css
@@ -631,6 +631,10 @@ span{
     height: 100% !important;
 }
 
+.h120rate {
+    height: 120% !important;
+}
+
 .hAuto {
     height: auto !important;
 }
@@ -1054,7 +1058,9 @@ span{
 .mtm33 {
     margin-top: -33px !important;
 }
-
+.mt5rate {
+    margin-top: 5%;
+}
 .mb0 {
     margin-bottom: 0 !important;
 }
