1. 이력조회 화면 (table 로우 색 변경, 우측 테이블 강제 줄바꿈) 2.회원관리 화면 (table 로우 색 변경) 3.  우측상단 관리자명 표시

--- a/src/main/web/resources/css/iotBadSmellMonitoring.css
+++ b/src/main/web/resources/css/iotBadSmellMonitoring.css
@@ -300,6 +300,9 @@ select::-ms-expand{
 .viewTable tr:last-child{
     border-bottom: 2px solid black;
 }
+.viewTable tr:hover{
+    background-color: rgb(217,239,255);
+}
 .viewTable td{
     border: 1px solid #ccc;
     height: 40px;
@@ -334,7 +337,11 @@ select::-ms-expand{
     border: 1px solid #ccc;
     height: 30px;
     width: 50px;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    WORD-BREAK:break-all;
 }
+
 .conditionTitle {
     font-weight: bold;
 }
