-회원가입 지역 및 휴대폰 번호 추가

--- a/src/main/web/resources/css/common.css
+++ b/src/main/web/resources/css/common.css
@@ -285,6 +285,10 @@ span{
     width: 750px !important;
 }
 
+.wd780 {
+    width: 780px !important;
+}
+
 .wd800 {
     width: 800px !important;
 }
