--- a/src/main/web/resources/css/iotBadSmellMonitoring.css
+++ b/src/main/web/resources/css/iotBadSmellMonitoring.css
@@ -84,7 +84,7 @@ table {
 /*    padding: 0;*/
 /*}*/
 
-select , input[type=text], input[type=password] , input[type=date] {
+select , input[type=text], input[type=textarea], input[type=password] , input[type=date] {
     border: 1px solid #ccc;
     height: 38px;
     border-radius: 7px;
@@ -95,7 +95,7 @@ select , input[type=text], input[type=password] , input[type=date] {
 select, input[type=date] {
     padding: 0 10px 0 10px;
 }
-input[type=text] , input[type=password] {
+input[type=text] , input[type=password], input[type=textarea] {
     padding: 0 10px 0 10px;
 }
 input[type=password] {
