1. 메뉴선택시 로딩바 2. 회원관리 (당일출석여부)

--- a/src/main/web/resources/css/iotBadSmellMonitoring.css
+++ b/src/main/web/resources/css/iotBadSmellMonitoring.css
@@ -107,6 +107,12 @@ input[type=password] {
 input[type=date] {
     background: url("../image/calendar2.png") no-repeat 98% 50%;
 }
+.xCircleBx{
+    color: red;
+}
+.checkBx{
+    color: green;
+}
 select {
     background: url("../image/sort.png") no-repeat 98% 50%;
 }
