1. 회원정보 (당일출석 조회_조건문 추가) 2. 공지사항 (confirm 수정) 3. 마이페이지/회원정보 (비밀번호 정규식 수정) 4. 로그인 (비번 길이 체크 제거)

--- a/src/main/web/resources/css/common.css
+++ b/src/main/web/resources/css/common.css
@@ -1047,6 +1047,10 @@ span{
     margin-top: 90px !important;
 }
 
+.mt100 {
+    margin-top: 100px !important;
+}
+
 .mt130 {
     margin-top: 130px !important;
 }
