1. 회원가입 - 관리자만 / 지역,지역상세,나이,전화번호 제거 2. 통계 차트 - 지역 동적 3. 통계 표 - 엑셀

--- a/src/main/web/resources/css/iotBadSmellMonitoring.css
+++ b/src/main/web/resources/css/iotBadSmellMonitoring.css
@@ -334,9 +334,6 @@ select::-ms-expand{
     border-bottom: 2px solid #888;
     font-weight: bold;
 }
-.statisticTable tr:hover{
-    background-color: rgb(217,239,255);
-}
 .statisticTable td{
     border: 1px solid #ccc;
     height: 40px;
@@ -452,6 +449,17 @@ select::-ms-expand{
     border-top-color: transparent;
     -webkit-animation: loader-1-inner 1.3s cubic-bezier(.58, .58, .58, .58) infinite;
     animation: loader-1-inner 1.3s cubic-bezier(.58, .58, .58, .58) infinite;
+}
+
+@-webkit-keyframes loader-1-inner {
+    0% {
+        -webkit-transform: rotate(-360deg);
+        transform: rotate(-360deg);
+    }
+    100% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
 }
 
 .dropdown-content {
