회원출석상태 (테이블 깨짐 수정, 하단 배경화면 흰색으로 변경)

--- a/src/main/web/resources/css/iotBadSmellMonitoring.css
+++ b/src/main/web/resources/css/iotBadSmellMonitoring.css
@@ -299,7 +299,7 @@ select::-ms-expand{
     margin: 3% auto 1% auto;
     text-align: center;
     width: 95%;
-
+    height: 480px!important;
 }
 .viewTable th{
     height: 40px;
