공지사항 (상세 boxicon 추가)

--- a/src/main/web/resources/css/iotBadSmellMonitoring.css
+++ b/src/main/web/resources/css/iotBadSmellMonitoring.css
@@ -392,6 +392,9 @@ select::-ms-expand{
 .conditionTitle {
     font-weight: bold;
 }
+#detail{
+    vertical-align: middle;
+}
 .mapLegend{
     width: 30px;
     height: 30px;
