1. 공지사항 - 전송 (SMS) 2. 공지사항 - 독려 카카오 메세지 전송 3. 파일 업로드 사이즈 제한 해제 (server.xml 에는 별도로 설정해야함)

--- a/src/main/web/resources/css/iotBadSmellMonitoring.css
+++ b/src/main/web/resources/css/iotBadSmellMonitoring.css
@@ -506,3 +506,9 @@ select::-ms-expand{
 .ui-datepicker-current {
     display: none;
 }
+#encourageSendBtn {
+    margin-right: 2.5%;
+}
+#noticeSendBtn {
+    width: 135px;
+}
