이용약관 (글씨 크기 수정)

--- a/src/main/web/resources/css/iotBadSmellMonitoring.css
+++ b/src/main/web/resources/css/iotBadSmellMonitoring.css
@@ -264,7 +264,7 @@ select::-ms-expand{
 .agreementForm{
     margin:  auto;
     text-align: left;
-    /*min-width: 5em;*/
+    font-size: 36px;
 }
 .whiteForm > tbody > tr> th {
     background: white;
