1. 메인 화면 마커 이벤트 변경 & 검색 조건 추가 2. 회원 상태 추가 3.개별이력 query 개선 및 지역 추가

--- a/src/main/web/resources/css/common.css
+++ b/src/main/web/resources/css/common.css
@@ -357,6 +357,10 @@ span{
     width: 20% !important;
 }
 
+.wd22rate {
+    width: 22% !important;
+}
+
 .wd25rate {
     width: 25% !important;
 }
@@ -451,6 +455,10 @@ span{
 
 .wd75rate {
     width: 75% !important;
+}
+
+.wd78rate {
+    width: 78% !important;
 }
 
 .wd80rate {
