1. 회원 관리자 승인 /거절 기능 추가 2. 메인화면 카카오맵 군집화 적용 3.접수이력 열람 / 미열람 기능 추가 4. 접수이력 특이사항 , 사진 유무 시 화면에 보여주기

--- a/src/main/web/resources/css/iotBadSmellMonitoring.css
+++ b/src/main/web/resources/css/iotBadSmellMonitoring.css
@@ -430,6 +430,16 @@ select::-ms-expand{
 .mDateTimeInput{
     width: 137px;
 }
+.mDateTimeInputMain {
+    font-size: 11px;
+    width: 35%;
+}
+@media all and (max-width:1630px) and (max-height:900px) {
+    .mDateTimeInputMain {
+        font-size: 11px;
+        width: 33%;
+    }
+}
 .borderRight{
     border-right: 1px solid #10639a;
 }
